# cmake_eclipse

./: CMakeLists.txt  README.md  scrp.sh
build_test/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake
build_test/src/class/: Makefile  cmake_install.cmake
src/class/: CMakeLists.txt  test.cpp  test.hpp
src/main/: main.cpp  main.hpp
